# cpp-unit-test-example

./: .gitignore  CMakeLists.txt  README.md
docs/: intial_mucking_around.md
src/: channel.cpp  channel.hpp  main.cc
test/: CMakeLists.txt  channel_test.cpp  test_main.cpp  test_main.cpp.temp
